Updating publication list

--- a/dmrpPublications.bib
+++ b/dmrpPublications.bib
@@ -955,37 +955,108 @@
 }
 
 @Article{Riano-Pachon2017,
-  author        = {Ria\~no-Pach\'on, DM and Mattiello, L},
-  title         = {Draft genome sequencing of the sugarcane hybrid SP80-3280 [version 2; referees: 2 approved]},
-  journal       = {F1000Research},
-  year          = {2017},
-  volume        = {6},
-  number        = {861},
-  __markedentry = {[diriano:]},
-  doi           = {10.12688/f1000research.11859.2},
+  author  = {Ria\~no-Pach\'on, DM and Mattiello, L},
+  title   = {Draft genome sequencing of the sugarcane hybrid SP80-3280 [version 2; referees: 2 approved]},
+  journal = {F1000Research},
+  year    = {2017},
+  volume  = {6},
+  number  = {861},
+  doi     = {10.12688/f1000research.11859.2},
 }
 
 @Article{Nobile2017,
-  author        = {Nobile, Paula Macedo and Bottcher, Alexandra and Mayer, Juliana L S and Brito, Michael S and Dos Anjos, Ivan A and Landell, Marcos Guimarães de Andrade and Vicentini, Renato and Creste, Silvana and Riaño-Pachón, Diego Mauricio and Mazzafera, Paulo},
-  title         = {Identification, classification and transcriptional profiles of dirigent domain-containing proteins in sugarcane.},
-  journal       = {Molecular genetics and genomics : MGG},
+  author       = {Nobile, Paula Macedo and Bottcher, Alexandra and Mayer, Juliana L S and Brito, Michael S and Dos Anjos, Ivan A and Landell, Marcos Guimarães de Andrade and Vicentini, Renato and Creste, Silvana and Riaño-Pachón, Diego Mauricio and Mazzafera, Paulo},
+  title        = {Identification, classification and transcriptional profiles of dirigent domain-containing proteins in sugarcane.},
+  journal      = {Molecular genetics and genomics : MGG},
+  year         = {2017},
+  month        = jul,
+  issn         = {1617-4623},
+  abstract     = {Dirigent (DIR) proteins, encoded by DIR genes, are referred to as "dirigent" because they direct the outcome of the coupling of the monolignol coniferyl alcohol into (+) or (-) pinoresinol, the first intermediates in the enantiocomplementary pathways for lignan biosynthesis. DIR domain-containing or DIR-like proteins are, thus, termed for not having a clear characterization. A transcriptome- and genome-wide survey of DIR domain-containing proteins in sugarcane was carried out, in addition to phylogenetic, physicochemical and transcriptional analyses. A total of 120 non-redundant sequences containing the DIR domain were identified and classified into 64 groups according to phylogenetic and sequence alignment analyses. In silico analysis of transcript abundance showed that these sequences are expressed at low levels in leaves and genes in the same phylogenetic clade have similar expression patterns. Expression analysis of ShDIR1-like transcripts in the culm internodes of sugarcane demonstrates their abundance in mature internodes, their induction by nitrogen fertilization and their predominant expression in cells that have a lignified secondary cell wall, such as vascular bundles of young internodes and parenchymal cells of the pith of mature internodes. Due to the lack of information about the functional role of DIR in plants, a possible relationship is discussed between the ShDIR1-like transcriptional profile and cell wall development in parenchyma cells of sugarcane culm, which typically accumulates large amounts of sucrose. The number of genes encoding the DIR domain-containing proteins in sugarcane is intriguing and is an indication per se that these proteins may have an important metabolic role and thus deserve to be better studied.},
+  country      = {Germany},
+  created      = {2017-07-12},
+  doi          = {10.1007/s00438-017-1349-6},
+  issn-linking = {1617-4623},
+  keywords     = {Lignan; Phylogeny; Protein homology modeling; Saccharum spp.; Transcriptome- and genome-wide survey},
+  nlm-id       = {101093320},
+  owner        = {NLM},
+  pii          = {10.1007/s00438-017-1349-6},
+  pmid         = {28699001},
+  pubmodel     = {Print-Electronic},
+  pubstatus    = {aheadofprint},
+  revised      = {2017-07-12},
+}
+
+@Article{Mello2017,
+  author       = {Mello, Bruno L and Alessi, Anna M and Riaño-Pachón, Diego M and deAzevedo, Eduardo R and Guimarães, Francisco E G and Espirito Santo, Melissa C and McQueen-Mason, Simon and Bruce, Neil C and Polikarpov, Igor},
+  title        = {Targeted metatranscriptomics of compost-derived consortia reveals a GH11 exerting an unusual exo-1,4-β-xylanase activity.},
+  journal      = {Biotechnology for biofuels},
+  year         = {2017},
+  volume       = {10},
+  pages        = {254},
+  issn         = {1754-6834},
+  abstract     = {Using globally abundant crop residues as a carbon source for energy generation and renewable chemicals production stand out as a promising solution to reduce current dependency on fossil fuels. In nature, such as in compost habitats, microbial communities efficiently degrade the available plant biomass using a diverse set of synergistic enzymes. However, deconstruction of lignocellulose remains a challenge for industry due to recalcitrant nature of the substrate and the inefficiency of the enzyme systems available, making the economic production of lignocellulosic biofuels difficult. Metatranscriptomic studies of microbial communities can unveil the metabolic functions employed by lignocellulolytic consortia and identify novel biocatalysts that could improve industrial lignocellulose conversion. In this study, a microbial community from compost was grown in minimal medium with sugarcane bagasse sugarcane bagasse as the sole carbon source. Solid-state nuclear magnetic resonance was used to monitor lignocellulose degradation; analysis of metatranscriptomic data led to the selection and functional characterization of several target genes, revealing the first glycoside hydrolase from Carbohydrate Active Enzyme family 11 with exo-1,4-β-xylanase activity. The xylanase crystal structure was resolved at 1.76 Å revealing the structural basis of exo-xylanase activity. Supplementation of a commercial cellulolytic enzyme cocktail with the xylanase showed improvement in Avicel hydrolysis in the presence of inhibitory xylooligomers. This study demonstrated that composting microbiomes continue to be an excellent source of biotechnologically important enzymes by unveiling the diversity of enzymes involved in in situ lignocellulose degradation.},
+  country      = {England},
+  created      = {2017-11-09},
+  doi          = {10.1186/s13068-017-0944-4},
+  issn-linking = {1754-6834},
+  keywords     = {Bioethanol; Compost; Lignocellulose; Metatranscriptomics; Microbial community; Xylanase},
+  nlm-id       = {101316935},
+  owner        = {NLM},
+  pii          = {944},
+  pmc          = {PMC5667448},
+  pmid         = {29118851},
+  pubmodel     = {Electronic-eCollection},
+  pubstatus    = {epublish},
+  revised      = {2017-11-12},
+}
+
+@Article{Contesini2017,
+  author        = {Contesini, Fabiano Jares and Liberato, Marcelo Vizoná and Rubio, Marcelo Ventura and Calzado, Felipe and Zubieta, Mariane Paludetti and Riaño-Pachón, Diego Mauricio and Squina, Fabio Marcio and Bracht, Fabricio and Skaf, Munir S and Damasio, André Ricardo},
+  title         = {Structural and functional characterization of a highly secreted α-l-arabinofuranosidase (GH62) from Aspergillus nidulans grown on sugarcane bagasse.},
+  journal       = {Biochimica et biophysica acta},
   year          = {2017},
-  month         = jul,
-  issn          = {1617-4623},
-  __markedentry = {[diriano:6]},
-  abstract      = {Dirigent (DIR) proteins, encoded by DIR genes, are referred to as "dirigent" because they direct the outcome of the coupling of the monolignol coniferyl alcohol into (+) or (-) pinoresinol, the first intermediates in the enantiocomplementary pathways for lignan biosynthesis. DIR domain-containing or DIR-like proteins are, thus, termed for not having a clear characterization. A transcriptome- and genome-wide survey of DIR domain-containing proteins in sugarcane was carried out, in addition to phylogenetic, physicochemical and transcriptional analyses. A total of 120 non-redundant sequences containing the DIR domain were identified and classified into 64 groups according to phylogenetic and sequence alignment analyses. In silico analysis of transcript abundance showed that these sequences are expressed at low levels in leaves and genes in the same phylogenetic clade have similar expression patterns. Expression analysis of ShDIR1-like transcripts in the culm internodes of sugarcane demonstrates their abundance in mature internodes, their induction by nitrogen fertilization and their predominant expression in cells that have a lignified secondary cell wall, such as vascular bundles of young internodes and parenchymal cells of the pith of mature internodes. Due to the lack of information about the functional role of DIR in plants, a possible relationship is discussed between the ShDIR1-like transcriptional profile and cell wall development in parenchyma cells of sugarcane culm, which typically accumulates large amounts of sucrose. The number of genes encoding the DIR domain-containing proteins in sugarcane is intriguing and is an indication per se that these proteins may have an important metabolic role and thus deserve to be better studied.},
-  country       = {Germany},
-  created       = {2017-07-12},
-  doi           = {10.1007/s00438-017-1349-6},
-  issn-linking  = {1617-4623},
-  keywords      = {Lignan; Phylogeny; Protein homology modeling; Saccharum spp.; Transcriptome- and genome-wide survey},
-  nlm-id        = {101093320},
+  volume        = {1865},
+  pages         = {1758--1769},
+  month         = dec,
+  issn          = {0006-3002},
+  __markedentry = {[diriano:]},
+  abstract      = {Carbohydrate-Active Enzymes are key enzymes for biomass-to-bioproducts conversion. α-l-Arabinofuranosidases that belong to the Glycoside Hydrolase family 62 (GH62) have important applications in biofuel production from plant biomass by hydrolyzing arabinoxylans, found in both the primary and secondary cell walls of plants. In this work, we identified a GH62 α-l-arabinofuranosidase (AnAbf62Awt) that was highly secreted when Aspergillus nidulans was cultivated on sugarcane bagasse. The gene AN7908 was cloned and transformed in A. nidulans for homologous production of AnAbf62Awt, and we confirmed that the enzyme is N-glycosylated at asparagine 83 by mass spectrometry analysis. The enzyme was also expressed in Escherichia coli and the studies of circular dichroism showed that the melting temperature and structural profile of AnAbf62Awt and the non-glycosylated enzyme from E. coli (AnAbf62Adeglyc) were highly similar. In addition, the designed glycomutant AnAbf62AN83Q presented similar patterns of secretion and activity to the AnAbf62Awt, indicating that the N-glycan does not influence the properties of this enzyme. The crystallographic structure of AnAbf62Adeglyc was obtained and the 1.7Å resolution model showed a five-bladed β-propeller fold, which is conserved in family GH62. Mutants AnAbf62AY312F and AnAbf62AY312S showed that Y312 was an important substrate-binding residue. Molecular dynamics simulations indicated that the loop containing Y312 could access different conformations separated by moderately low energy barriers. One of these conformations, comprising a local minimum, is responsible for placing Y312 in the vicinity of the arabinose glycosidic bond, and thus, may be important for catalytic efficiency.},
+  country       = {Netherlands},
+  created       = {2017-09-11},
+  doi           = {10.1016/j.bbapap.2017.09.001},
+  issn-linking  = {0006-3002},
+  issue         = {12},
+  keywords      = {Arabinoxylan; Aspergillus nidulans; GH62; N-glycosylation; α-l-Arabinofuranosidase},
+  nlm-id        = {0217513},
   owner         = {NLM},
-  pii           = {10.1007/s00438-017-1349-6},
-  pmid          = {28699001},
+  pii           = {S1570-9639(17)30209-1},
+  pmid          = {28890404},
   pubmodel      = {Print-Electronic},
-  pubstatus     = {aheadofprint},
-  revised       = {2017-07-12},
+  pubstatus     = {ppublish},
+  revised       = {2017-10-20},
+}
+
+@Article{Manfiolli2017,
+  author        = {Manfiolli, Adriana Oliveira and de Castro, Patrícia Alves and Dos Reis, Thaila Fernanda and Dolan, Stephen and Doyle, Sean and Jones, Gary and Riaño Pachón, Diego M and Ulaş, Mevlüt and Noble, Luke M and Mattern, Derek J and Brakhage, Axel A and Valiante, Vito and Silva-Rocha, Rafael and Bayram, Ozgur and Goldman, Gustavo H},
+  title         = {Aspergillus fumigatus protein phosphatase PpzA is involved in iron assimilation, secondary metabolite production, and virulence.},
+  journal       = {Cellular microbiology},
+  year          = {2017},
+  volume        = {19},
+  month         = dec,
+  issn          = {1462-5822},
+  __markedentry = {[diriano:6]},
+  abstract      = {Metal restriction imposed by mammalian hosts during an infection is a common mechanism of defence to reduce or avoid the pathogen infection. Metals are essential for organism survival due to its involvement in several biological processes. Aspergillus fumigatus causes invasive aspergillosis, a disease that typically manifests in immunocompromised patients. A. fumigatus PpzA, the catalytic subunit of protein phosphatase Z (PPZ), has been recently identified as associated with iron assimilation. A. fumigatus has 2 high-affinity mechanisms of iron acquisition during infection: reductive iron assimilation and siderophore-mediated iron uptake. It has been shown that siderophore production is important for A. fumigatus virulence, differently to the reductive iron uptake system. Transcriptomic and proteomic comparisons between ∆ppzA and wild-type strains under iron starvation showed that PpzA has a broad influence on genes involved in secondary metabolism. Liquid chromatography-mass spectrometry under standard and iron starvation conditions confirmed that the ΔppzA mutant had reduced production of pyripyropene A, fumagillin, fumiquinazoline A, triacetyl-fusarinine C, and helvolic acid. The ΔppzA was shown to be avirulent in a neutropenic murine model of invasive pulmonary aspergillosis. PpzA plays an important role at the interface between iron starvation, regulation of SM production, and pathogenicity in A. fumigatus.},
+  country       = {England},
+  created       = {2017-07-28},
+  doi           = {10.1111/cmi.12770},
+  issn-linking  = {1462-5814},
+  issue         = {12},
+  nlm-id        = {100883691},
+  owner         = {NLM},
+  pmid          = {28753224},
+  pubmodel      = {Print-Electronic},
+  pubstatus     = {ppublish},
+  revised       = {2017-11-09},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
